--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
           <img src="img/logo.svg" width="173" height="25" alt="">
         </a>
         <div>
-          <img src="img/icn_search.svg" class="navIcons" alt="Search">
-          <img class="ml-4 navIcons" src="img/icn_person.svg" alt="Profile">
+          <img src="img/icn_search.svg" class="nav-icons-size" alt="Search">
+          <img class="ml-4 nav-icons-size" src="img/icn_person.svg" alt="Profile">
         </div>
       </div>
     </nav>
