Tabs design for switching search by email or phone

--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
         <!-- Nav tabs -->
         <ul class="nav nav-tabs" id="myTab" role="tablist">
           <li class="nav-item" role="presentation">
-            <button class="nav-link active" id="email-tab" data-toggle="tab" data-target="#email" type="button" role="tab" aria-controls="home" aria-selected="true">Email</button>
+            <button class="nav-link nav-tab-color active" id="email-tab" data-toggle="tab" data-target="#email" type="button" role="tab" aria-controls="home" aria-selected="true">Email</button>
           </li>
           <li class="nav-item" role="presentation">
-            <button class="nav-link" id="phone-tab" data-toggle="tab" data-target="#phone" type="button" role="tab" aria-controls="profile" aria-selected="false">Phone</button>
+            <button class="nav-link nav-tab-color" id="phone-tab" data-toggle="tab" data-target="#phone" type="button" role="tab" aria-controls="profile" aria-selected="false">Phone</button>
           </li>
         </ul>
     
@@ -45,16 +45,16 @@
               <div class="input-group">
                 <input class="form-control" type="text" name="email" placeholder="Enter an Email Address" />
                 <p class="error-msg">Please enter a valid email address</p>
-                <button id="btn-search" class="btn btn-form-submit text-uppercase" type="submit">Go!</button>
+                <button id="btn-search-by-email" class="btn btn-form-submit text-uppercase" type="submit">Go!</button>
               </div>
             </form>
           </div>
           <div class="tab-pane" id="phone" role="tabpanel" aria-labelledby="phone-tab">
             <form>
               <div class="input-group">
-                <input class="form-control" type="text" name="phone" placeholder="Enter a phone number" />
+                <input class="form-control" type="number" name="phone" placeholder="Enter a phone number" />
                 <p class="error-msg">Please enter a valid phone number</p>
-                <button id="btn-search" class="btn btn-form-submit text-uppercase" type="submit">Go!</button>
+                <button id="btn-search-by-phone" class="btn btn-form-submit text-uppercase" type="submit">Go!</button>
               </div>
             </form>
           </div>
