--- a/index.html
+++ b/index.html
@@ -22,7 +22,14 @@
       </div>
     </nav>
 
-    <section class="above-the-fold">
+    <section class="col-12 loading text-center">
+      <div class="container">
+        <img src="./img/loading_spinner.gif" alt="loading-spinner">
+        <p>Please wait a moment</p>
+      </div>
+    </section>
+
+    <section class="above-the-fold hide">
       <div class="container">
         <div class="headline text-white text-center mb-4 mb-md-5">
           <h1 class="mb-3">Start Your Search!</h1>
@@ -67,7 +74,7 @@
     </section>
     
 
-    <section class="features">
+    <section class="features hide">
       <div class="container">
         <div class="headline">
           <h1 class="text-primary text-center mb-2 mb-md-4">Here's How It Works</h1>
