Search by phone and email UI implemented on result page

--- a/result.html
+++ b/result.html
@@ -67,13 +67,37 @@
           <h1 class="mb-3">Can't Find The Right Person?</h1>
           <h2 class="mb-4 mb-md-5"><strong>Try Again</strong> - Make a new search</h2>
         </div>
-        <form>
-          <div class="input-group">
-            <input class="form-control" type="text" name="email" placeholder="Enter an Email Address" />
-            <p class="error-msg">Please enter a valid email address</p>
-            <button id="btn-search" class="btn btn-form-submit text-uppercase" type="submit">Go!</button>
+        <!-- Nav tabs -->
+        <ul class="nav nav-tabs" id="myTab" role="tablist">
+          <li class="nav-item" role="presentation">
+            <button class="nav-link nav-tab-color active" id="email-tab" data-toggle="tab" data-target="#email" type="button" role="tab" aria-controls="home" aria-selected="true">Email</button>
+          </li>
+          <li class="nav-item" role="presentation">
+            <button class="nav-link nav-tab-color" id="phone-tab" data-toggle="tab" data-target="#phone" type="button" role="tab" aria-controls="profile" aria-selected="false">Phone</button>
+          </li>
+        </ul>
+    
+        <!-- Tab panes -->
+        <div class="tab-content">
+          <div class="tab-pane active" id="email" role="tabpanel" aria-labelledby="email-tab">
+            <form>
+              <div class="input-group">
+                <input class="form-control" type="text" name="email" placeholder="Enter an Email Address" />
+                <p class="error-msg">Please enter a valid email address</p>
+                <button id="btn-search-by-email" class="btn btn-form-submit text-uppercase" type="submit">Go!</button>
+              </div>
+            </form>
           </div>
-        </form>
+          <div class="tab-pane" id="phone" role="tabpanel" aria-labelledby="phone-tab">
+            <form>
+              <div class="input-group">
+                <input class="form-control" type="number" name="phone" placeholder="Enter a phone number" />
+                <p class="error-msg">Please enter a valid phone number</p>
+                <button id="btn-search-by-phone" class="btn btn-form-submit text-uppercase" type="submit">Go!</button>
+              </div>
+            </form>
+          </div>
+        </div>
       </div>
     </section>
     
