--- a/index.html
+++ b/index.html
@@ -29,6 +29,11 @@
         </div>
         
         <form>
+          <div class="form-inline"> 
+            <p class="mr-3" id="type-search-text" style="font-size: small; color: #FFFFFF;">TYPE OF SEARCH: </p>
+          <button type="button" class="btn btn-warning mb-3 actual-search text-center">EMAIL ADDRESS</button> 
+          <button type="button" class="btn btn-outline-warning ml-3 mb-3">PHONE NUMBER</button>
+          </div>
           <div class="input-group">
             <input class="form-control" type="text" name="email" placeholder="Enter an Email Address" />
             <p class="error-msg">Please enter a valid email address</p>
