--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
         <form>
           <div class="form-inline"> 
             <p class="mr-3" id="type-search-text" style="font-size: small; color: #FFFFFF;">TYPE OF SEARCH: </p>
-          <button type="button" class="btn btn-warning mb-3 actual-search text-center">EMAIL ADDRESS</button> 
-          <button type="button" class="btn btn-outline-warning ml-3 mb-3">PHONE NUMBER</button>
+          <button id="btn-search-by-email" type="button" class="btn btn-warning mb-3">EMAIL ADDRESS</button> 
+          <button id="btn-search-by-phone" type="button" class="btn btn-outline-warning ml-3 mb-3">PHONE NUMBER</button>
           </div>
           <div class="input-group">
             <input class="form-control" type="text" name="email" placeholder="Enter an Email Address" />
