loading font style improved

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <section class="loading text-center">
       <div class="container">
         <img src="./img/loading_spinner.gif" alt="loading-spinner">
-        <p>Please wait a moment</p>
+        <p style="font-weight: bold;">Please wait a moment...</p>
       </div>
     </section>
 
