responsiveness improved on search by email and phone buttons

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           <div class="form-inline"> 
             <p class="mr-3" id="type-search-text" style="font-size: small; color: #FFFFFF;">TYPE OF SEARCH: </p>
           <button id="btn-search-by-email" type="button" class="btn btn-warning mb-3">EMAIL ADDRESS</button> 
-          <button id="btn-search-by-phone" type="button" class="btn btn-outline-warning ml-3 mb-3">PHONE NUMBER</button>
+          <button id="btn-search-by-phone" type="button" class="btn btn-outline-warning ml-md-3 mb-3">PHONE NUMBER</button>
           </div>
           <div class="input-group">
             <input class="form-control" type="text" name="email" placeholder="Enter an Email Address" />
